- code refactoring - card button focus z-index problem fixed

--- a/src/shared/components/planet-card/planet-card.scss
+++ b/src/shared/components/planet-card/planet-card.scss
@@ -1,3 +1,7 @@
+$border-gray: #dee2e6;
+$active-card-button-bg-blue: #cfe2ff;
+$focus-card-button-border-blue: rgba(13 110 253 / 0.25);
+
 .planet-card-items {
   list-style-type: none;
   padding-left: 0;
@@ -5,7 +9,6 @@
 
 .planet-card {
   width: 100%;
-  position: relative;
 
   &:first-child {
     .planet-card-button {
@@ -21,7 +24,7 @@
 
   &.show {
     .planet-card-button {
-      background-color: #cfe2ff;
+      background-color: $active-card-button-bg-blue;
     }
   }
 }
@@ -30,21 +33,22 @@
   width: 100%;
   height: 50px;
   outline: none;
-  border: solid 1px #dee2e6;
+  border: solid 1px $border-gray;
   background-color: #ffffff;
   z-index: 2;
+  position: relative;
 
   &:focus {
-    box-shadow: 0 0 0 0.25rem #0d6efd40;
+    box-shadow: 0 0 0 0.25rem $focus-card-button-border-blue;
     z-index: 3;
   }
 }
 
 .planet-card-body {
-  border: solid 1px #dee2e6;
+  border: solid 1px $border-gray;
   overflow: hidden;
   max-height: 0;
-  transition: max-height 0.2s ease-out;
+  transition: max-height 0.4s ease-out;
 }
 
 .planet-card-content {
